# predictor-mundial

./: .gitignore  README.md  STATUS.md  WC2026_R16.md  WC2026_R32.md  WC2026_README.md  backtest_ensemble.py  compare_oloraculo.py  compare_wc2026.csv  compute_metrics.py  download_statsbomb.py  grid_mini.py  grid_mini_results.csv  grid_recent_form_results.csv  grid_search_recent_form.py  grid_search_v5.py  pyproject.toml  validate_best.py  wc2026_predictions.csv  wc2026_r16_predictions.csv  wc2026_r32_predictions.csv  wc2026_tournament_probs.csv
.github/workflows/: ci.yml
scripts/: add_r16_final.py  add_r32_results.py  debug_r32_predictions.py  diagnose_errors.py  list_statsbomb_competitions.py  migrate_print_to_logging.py  setup_data.py  test_dispersion.py  tune_params.py  update_r32_r16_results.py  verify_backtest.py  verify_wc2026_metrics.py
src/: __init__.py  cli.py  config.py  domain.py  logging_config.py  paths.py
tests/: test_bivariate.py  test_bivariate_poisson.py  test_calibration.py  test_config.py  test_domain.py  test_elo.py  test_ensemble.py  test_ensemble_comparison.py  test_ensemble_optimization.py  test_features_backtest.py  test_historical_features.py  test_injury_factors.py  test_logging_config.py  test_paths.py  test_poisson.py  test_prediction_history.py  test_r16_actual_winners.py  test_r32_actual_winners.py  test_recent_form.py  test_scraping.py  test_simulator_ensemble.py  test_simulator_features.py  test_skellam.py  test_statsbomb.py  test_statsbomb_downloader.py  test_strengths_cache.py  test_wc2026_bracket.py  test_xg_approximation.py
(+53 files in other folders)
