[project]
name = "predictor-mundial"
version = "0.1.0"
description = "Sistema de predicciones de fútbol basado en xG + cuotas de mercado"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
scraper = [
    "understatapi>=0.4",
    "soccerdata>=1.8",
]
ml = [
    "xgboost>=2.1",
    "lightgbm>=4.4",
]

[project.scripts]
predictor = "src.cli:main"
wc2026-readme = "src.cli.wc2026_readme:main"
wc2026-simulate = "src.simulation.wc2026_simulate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
